# hse-algo

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  db.sqlite3  pyproject.toml  ruff.toml
algo/: admin.py  models.py  utils.py  views.py
algo/migrations/: 0001_initial.py
algo/templates/algo/: empty_history.html  history.html  index.html  task_result.html
algo_navig/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
algo_navig/migrations/: 0001_initial.py  0002_task_alter_page_content_result.py  0003_alter_page_options_alter_result_options_and_more.py  0004_alter_page_options.py
algo_navig/templates/algo_navig/: menu.html  page.html
hse_algo/: settings.py  urls.py
website/: urls.py  views.py
website/templates/website/: base.html  courts.html  home.html  info.html  sproduct1.html  sproduct2.html  sproduct3.html  sproduct4.html  sproduct5.html  store.html  store_result.html
